--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.1.3",
     "@astrojs/tailwind": "^5.1.4",
+    "@motionone/utils": "^10.18.0",
     "astro": "^5.1.5",
     "astro-icon": "^1.1.5",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.17.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
