--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.0.5",
     "@astrojs/react": "^4.1.3",
     "@astrojs/tailwind": "^5.1.4",
     "@motionone/utils": "^10.18.0",
+    "aos": "^2.3.4",
     "astro": "^5.1.5",
     "astro-icon": "^1.1.5",
     "clsx": "^2.1.1",
