--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "astro": "^5.1.5",
     "astro-icon": "^1.1.5",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.17.0",
+    "embla-carousel": "^8.5.2",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-class-names": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^11.18.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17"
   },
