--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@motionone/utils": "^10.18.0",
     "aos": "^2.3.4",
     "astro": "^5.1.5",
+    "astro-custom-toc": "^2.0.40",
     "astro-icon": "^1.1.5",
     "clsx": "^2.1.1",
     "embla-carousel": "^8.5.2",
