--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "astro": "^5.2.1",
     "astro-custom-toc": "^2.0.40",
     "astro-icon": "^1.1.5",
+    "astro-seo-schema": "^5.0.0",
+    "astro-social-share": "^2.1.0",
     "clsx": "^2.1.1",
     "embla-carousel": "^8.5.2",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-class-names": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.2",
+    "schema-dts": "^1.1.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17"
   },
