--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "embla-carousel-class-names": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.2",
+    "lenis": "^1.2.3",
     "schema-dts": "^1.1.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17"
